<resources>
    <string name="app_name">MamoPay</string>
    <string name="msg_confirm_name">Please confirm your name as it appears on your ID.</string>
    <string name="msg_pin_intro">Please enter a PIN code that will be used to quickly unlock the Mamo Pay app on your device.</string>
    <string name="msg_confirm_pin">Please confirm your PIN code to continue</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_confirm">Confirm</string>

    <!--  Number-pad strings  -->
    <string name="label_num1">1</string>
    <string name="label_num2">2</string>
    <string name="label_num3">3</string>
    <string name="label_num4">4</string>
    <string name="label_num5">5</string>
    <string name="label_num6">6</string>
    <string name="label_num7">7</string>
    <string name="label_num8">8</string>
    <string name="label_num9">9</string>
    <string name="label_num0">0</string>

    <!--  Fingerprint prompt  -->
    <string name="msg_fingerprint_prompt_title">Fingerprint login</string>
    <string name="msg_fingerprint_prompt_subtitle">Use your fingerprint for easier access to your account.</string>
    <string name="msg_fingerprint_prompt_description">Confirm fingerprint to continue</string>
    <string name="msg_fingerprint_prompt_neg_button">Use code</string>
    <string name="label_forgot_code">Forgot code?</string>
    <string name="msg_greetings">Hello, %1$s!</string>
    <string name="err_no_empty">Cannot be empty</string>
    <string name="err_name_constraint_mismatch">Use letters only without spaces</string>
    <string name="err_login_failed">Login failed</string>
    <string name="err_fingerprint_setup_system">Biometric not setup on system</string>
    <string name="label_add_money">Add money</string>
    <string name="label_send_money">Send money</string>
    <string name="label_more">More</string>
    <string name="label_received">Received</string>
    <string name="label_sent">Sent</string>

    <!--  Notification  -->
    <string name="val_channel_gen_id">213</string>
    <string name="val_channel_gen_name">ChannelName</string>
    <string name="label_notification_title_money_added">Money added</string>
    <string name="label_notification_desc_money_added">%1$s %2$s has been added to your account</string>
    <string name="page_title_confirm_name">Confirm name</string>
    <string name="page_title_pin_setup">Choose PIN code</string>
    <string name="page_title_pin_setup_confirm">Confirm PIN code</string>


</resources>
