<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:rowCount="4"
    android:columnCount="3"
    android:layout_gravity="center">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num1"
        android:layout_width="@dimen/numpad_dial_button_height"
        android:layout_height="@dimen/numpad_dial_button_height"
        style="@style/AppTheme.ButtonNumpad"
        android:text="@string/label_num1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num2"
        android:layout_width="@dimen/numpad_dial_button_height"
        android:layout_height="@dimen/numpad_dial_button_height"
        style="@style/AppTheme.ButtonNumpad"
        android:text="@string/label_num2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num3"
        android:layout_width="@dimen/numpad_dial_button_height"
        android:layout_height="@dimen/numpad_dial_button_height"
        style="@style/AppTheme.ButtonNumpad"
        android:text="@string/label_num3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num4"
        android:layout_width="@dimen/numpad_dial_button_height"
        android:layout_height="@dimen/numpad_dial_button_height"
        style="@style/AppTheme.ButtonNumpad"
        android:text="@string/label_num4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num5"
        android:layout_width="@dimen/numpad_dial_button_height"
        android:layout_height="@dimen/numpad_dial_button_height"
        style="@style/AppTheme.ButtonNumpad"
        android:text="@string/label_num5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num6"
        android:layout_width="@dimen/numpad_dial_button_height"
        android:layout_height="@dimen/numpad_dial_button_height"
        style="@style/AppTheme.ButtonNumpad"
        android:text="@string/label_num6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num7"
        android:layout_width="@dimen/numpad_dial_button_height"
        android:layout_height="@dimen/numpad_dial_button_height"
        style="@style/AppTheme.ButtonNumpad"
        android:text="@string/label_num7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num8"
        android:layout_width="@dimen/numpad_dial_button_height"
        android:layout_height="@dimen/numpad_dial_button_height"
        style="@style/AppTheme.ButtonNumpad"
        android:text="@string/label_num8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num9"
        android:layout_width="@dimen/numpad_dial_button_height"
        android:layout_height="@dimen/numpad_dial_button_height"
        style="@style/AppTheme.ButtonNumpad"
        android:text="@string/label_num9" />

    <ImageView
        android:id="@+id/fingerprint"
        android:layout_width="@dimen/numpad_fingerprint_height"
        android:layout_height="@dimen/numpad_fingerprint_height"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_m"
        android:src="@drawable/ic_fingerprint" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/num0"
        android:layout_width="@dimen/numpad_dial_button_height"
        android:layout_height="@dimen/numpad_dial_button_height"
        style="@style/AppTheme.ButtonNumpad"
        android:text="@string/label_num0" />

    <ImageView
        android:id="@+id/backspace"
        android:layout_width="@dimen/numpad_backspace_height"
        android:layout_height="@dimen/numpad_backspace_height"
        android:layout_gravity="center"
        android:padding="@dimen/padding_l"
        android:layout_margin="@dimen/margin_m"
        android:src="@drawable/ic_backspace_black" />



</GridLayout>