<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBoardingActivity"
    android:background="@color/black4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white100">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/page_margin_m"
            android:src="@drawable/ic_arrow_back"/>

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            style="@style/AppTheme.Body1.l"
            android:textStyle="normal"
            android:textColor="@color/black100"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/msg_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/msg_confirm_name"
        android:layout_marginTop="@dimen/page_margin_m"
        style="@style/AppTheme.Body1.m"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="@id/margin_end"
        app:layout_constraintStart_toStartOf="@id/margin_start"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name_con"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/margin_start"
        app:layout_constraintEnd_toEndOf="@id/margin_end"
        app:layout_constraintTop_toBottomOf="@id/msg_label"
        android:layout_marginTop="@dimen/margin_l"
        android:hint="@string/label_first_name"
        android:theme="@style/AppTheme.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name_con"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/margin_start"
        app:layout_constraintEnd_toEndOf="@id/margin_end"
        app:layout_constraintTop_toBottomOf="@id/first_name_con"
        app:layout_constraintBottom_toTopOf="@id/confirm_button"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="spread_inside"
        android:layout_marginTop="@dimen/margin_l"
        android:hint="@string/label_last_name"
        android:theme="@style/AppTheme.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        app:layout_constraintStart_toStartOf="@id/margin_start"
        app:layout_constraintEnd_toEndOf="@id/margin_end"
        app:layout_constraintBottom_toTopOf="@id/margin_bottom"
        app:layout_constraintTop_toBottomOf="@id/last_name_con"
        android:text="@string/label_confirm"
        android:theme="@style/AppTheme.Button"
        android:layout_marginBottom="@dimen/margin_m" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/page_margin_m" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/page_margin_m" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/page_margin_m" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/page_margin_m" />




</androidx.constraintlayout.widget.ConstraintLayout>